--- a/spotifyvault/src/Components/Auth.css
+++ b/spotifyvault/src/Components/Auth.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   min-height: 100vh;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 20px;
 }
 
 .hero_h1-white {
@@ -86,4 +86,47 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .app-container {
+    margin-top: 10vh;
+    overflow: hidden
+  }
+
+  .hero_h1-white, .hero_h1-green {
+    font-size: 90px;
+    line-height: 30px;
+  }
+
+  .app-slogan {
+    font-size: 20px;
+    width: 80%;
+  }
+
+  .app-button {
+    font-size: 1rem;
+    padding: 0.5rem 2rem;
+  }
+
+  .footer-image-container {
+    margin-top: 5vh;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero_h1-white, .hero_h1-green {
+    font-size: 60px;
+    line-height: 15px;
+  }
+
+  .app-slogan {
+    font-size: 16px;
+    width: 90%;
+  }
+
+  .app-button {
+    font-size: 0.875rem;
+    padding: 0.5rem 1.5rem;
+  }
 }
