--- a/spotifyvault/src/Components/CustomTooltip.css
+++ b/spotifyvault/src/Components/CustomTooltip.css
@@ -29,4 +29,11 @@
     border-style: solid;
     border-color: #fff transparent transparent transparent;
 }
+
+@media (max-width: 480px) { 
+    .tooltip-content {
+        font-size: 12px;
+        width: 200px;
+    }
+}
   
