--- a/spotifyvault/src/Components/BackupPlaylistPage.css
+++ b/spotifyvault/src/Components/BackupPlaylistPage.css
@@ -110,6 +110,20 @@
 .fetch-button:hover {
     background-color: #17a446;
 }
+
+.fetch-all-button {
+    padding: 10px 20px;
+    background-color: #1dd05d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.fetch-all-button:hover {
+    background-color: #17a446;
+}
   
 .content {
     display: flex;
@@ -155,6 +169,44 @@
   
 .export-button:hover {
     background-color: #17a446;
+}
+
+.loader-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+  }
+  
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+.loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10000;
+}
+
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 @media (max-width: 800px) {
